[package]
name = "gamepad_input"
version = "0.1.0"
authors = ["Thomas <tom.bauer95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.7.4"
gilrs-core = "0.2.6"
url = "2.1.1"
uuid = "0.8.1"
tungstenite = "0.11.1"
